--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    height: 100%;
 }
 
 nav{
@@ -8,7 +9,7 @@ nav{
 }
 
 nav ul{
-    display: inline-block;
+    display: inline;
     list-style: none;
 }
 
