--- a/style.css
+++ b/style.css
@@ -4,8 +4,18 @@ body{
     height: 100%;
 }
 
+.bg-container{
+    background-image: url("https://images.unsplash.com/photo-1496065187959-7f07b8353c55?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+    opacity: 75%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 nav{
     text-align: center;
+    background-color: blueviolet;
 }
 
 nav ul{
@@ -13,6 +23,10 @@ nav ul{
     list-style: none;
 }
 
-nav ul a{
+nav ul li{
+    padding: 10px;
+}
+
+nav ul li a{
     text-decoration: none;
 }
