--- a/style.css
+++ b/style.css
@@ -20,12 +20,10 @@ nav{
 
 ul{
     padding: 10px;
+    list-style-type: none;
+    margin: 0;
 }
 
 li{
     display: inline;
-}
-
-nav ul li a{
-    text-decoration: none;
 }
