--- a/style.css
+++ b/style.css
@@ -27,3 +27,11 @@ ul{
 li{
     display: inline;
 }
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}  
